--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.548.0",
-    "next": "16.0.0",
+    "next": "^16.0.5",
     "next-themes": "^0.4.6",
     "query-string": "^9.3.1",
     "react": "19.2.0",
