--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.548.0",
     "next": "^16.0.5",
